<resources>

    <string name="app_name" translatable="false">CriminalIntent</string>
    <string name="crime_title_hint" translatable="false">Enter a title for the crime : </string>
    <string name="crime_title_label" translatable="false">Title</string>
    <string name="crime_details_label" translatable="false">Details</string>
    <string name="crime_solved_label" translatable="false">Solved</string>
    <string name="date_picker_title" translatable="false">Date of crime:</string>
    <string name="time_picker_title" translatable="false">Time of crime:</string>
    <string name="new_crime" translatable="false">New Crime</string>
    <string name="show_subtitle" translatable="false">Show Subtitle</string>
    <string name="hide_subtitle" translatable="false">Hide Subtitle</string>
    <string name="subtitle_format" translatable="false">%1$d crimes</string>
    <string name="crime_suspect_text" translatable="false">Choose Suspect</string>
    <string name="crime_report_text" translatable="false">Send Crime Report</string>
    <string name="crime_report" translatable="false">%1$s!
    The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved" translatable="false">The case is solved</string>
    <string name="crime_report_unsolved" translatable="false">The case is not solved</string>
    <string name="crime_report_no_suspect" translatable="false">there is no suspect.</string>
    <string name="crime_report_suspect" translatable="false">the suspect is %s.</string>
    <string name="crime_report_subject" translatable="false">CriminalIntent Crime Report</string>
    <string name="send_report" translatable="false">Send crime report via</string>
    <string name="crime_call_text" translatable="false">Call: %s</string>
    <string name="call_suspect" translatable="false">Call suspect</string>

    <string name="crime_photo_button_description" translatable="false">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description" translatable="false">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description" translatable="false">Crime scene photo (set)</string>

</resources>
